# batch-wap

./: .gitignore  CLAUDE.md  PLAN.md  README.md  SPEC.md  docker-compose.yaml  pyproject.toml
.claude/agents/: batch-data-researcher.md  plan-reviewer.md
docs/: batch_data_generator_findings.md
src/batch_wap/: __init__.py
src/batch_wap/ingestion/: __init__.py
src/batch_wap/ingestion/wap_v1/: README.md  __init__.py  flatten.py  schemas.py
src/batch_wap/ingestion/wap_v1/stage_events/: README.md  cli.py  clickhouse.py  flatten.py  ids.py  job.py  models.py  schemas.py
src/batch_wap/sources/: __init__.py
src/batch_wap/sources/batch_data_generator/: CLAUDE.md  README.md  cli.py  envelope.py  generator.py  sink.py  state.py
src/batch_wap/warehouse/: queries.sql
tests/batch_data_generator/: README.md  _contract_api.py  test_generation_contract.py  test_sink.py  test_state_contract.py
tests/wap_v1/: _helpers.py  test_flatten.py  test_ids.py  test_job_failure_stats.py  test_models.py  test_quarantine_dedup.py  test_schemas.py  test_validation_quarantine.py  test_validation_staging.py
tests/wap_v1/stage_events/: _helpers.py  conftest.py  test_flatten.py  test_ids.py  test_job_failure_stats.py  test_models.py  test_quarantine_dedup.py  test_schemas.py  test_validation_quarantine.py  test_validation_staging.py
